<resources>
    <string name="app_name">My Application</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_cotizacion">Cotizacion</string>
    <string name="title_activity_listado_vehiculos">ListadoVehiculosActivity</string>

    <string name="Cotizar_Nombre">Sin vehiculo</string>
    <string name="Cotizar_precio_Vehiculo">Q0.00</string>
    <string name="Cotizar_precio_Envio">Q0.00</string>
    <string name="Cotizar_impuesto_Sat">Q0.00</string>
    <string name="Cotizar_impuesto_Aduana">Q0.00</string>
    <string name="Cotizar_taller">Q0.00</string>
    <string name="Cotizar_iva">Q0.00</string>
    <string name="Cotizar_isr">Q0.00</string>
    <string name="Cotizar_error">Esto es un error</string>
</resources>
